# aaa-analyzer

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  docker.yml  release.yml
scripts/: install-hooks.sh  pre-commit  pre-push
src/analyzer/api/: app.py  main.py
src/analyzer/common/: logging.py  trace.py
src/analyzer/inference/: __main__.py
src/analyzer/orchestration/: consumer.py  scheduler.py
tests/: conftest.py  test_api.py  test_inference_cli.py  test_logging_trace.py  test_pytest_marker_convention.py
