[project]
name = "aaa-analyzer"
version = "0.1.0"
description = "AAA Phase 2 ML analyzer service — market regime analysis and trading signal inference"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.50.0",
  "pymysql>=1.1",
  "sqlalchemy>=2.0",
  "apscheduler>=3,<4",
  "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
  "ruff>=0.8",
  "pyright>=1.1.390",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: DB/Redis integration tests",
]
addopts = "--strict-markers --cov=analyzer --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "emoji"
major_on_zero = false
build_command = false

[tool.semantic_release.commit_parser_options]
major_tags = ["breaking"]
minor_tags = ["✨", ":sparkles:"]
patch_tags = ["🐛", "⚡", ":bug:", ":zap:"]
