[project]
name = "aaa-analyzer"
version = "0.1.0"
description = "AAA Phase 2 ML analyzer service — market regime analysis and trading signal inference"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.50.2",
  "pymysql>=1.1",
  "sqlalchemy>=2.0",
  "apscheduler>=3,<4",
  "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
  "ruff>=0.8",
  "pyright>=1.1.390",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: DB/Redis integration tests",
]
addopts = "--strict-markers --cov=analyzer --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "emoji"
major_on_zero = false
# allow_zero_version(기본 false)이 major_on_zero보다 우선 적용되어, 이 값을
# true로 두지 않으면 어떤 릴리즈 커밋이든 0.x → 1.0.0으로 강제 승격된다
# (실측: breaking 커밋 없이 0.1.0→1.0.0 오발생 확인, source: version/algorithm.py
# _increment_version — allow_zero_version 분기가 major_on_zero 분기보다 먼저 평가됨).
allow_zero_version = true
# version_toml 갱신 후 uv.lock을 재생성해 release 커밋에 함께 포함(assets).
# 누락 시 다음 릴리즈부터 `uv sync --locked`가 lockfile 불일치로 실패해
# Docker 빌드가 매번 깨진다(실측: 최초 미스핏 릴리즈에서 재현 확인).
build_command = "uv lock"
assets = ["uv.lock"]
# collector .releaserc.js의 @semantic-release/git message 컨벤션과 동일한 형식
# (gitmoji + conventional + [skip ci] — 릴리즈 커밋 자체가 Release 워크플로우를
# 재트리거하지 않도록 방지).
commit_message = "🔖 chore(release): v{version} [skip ci]"

[tool.semantic_release.commit_parser_options]
major_tags = ["breaking"]
minor_tags = ["✨", ":sparkles:"]
patch_tags = ["🐛", "⚡", ":bug:", ":zap:"]
